<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/workspaceListFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/workspaces" />
    <item
        android:id="@+id/notificationFragment"
        android:icon="@drawable/ic_notification"
        android:title="@string/notifications" />
    <item
        android:id="@+id/rewardFragment"
        android:icon="@drawable/ic_reward"
        android:title="@string/rewards" />
    <item
        android:id="@+id/chatBotFragment"
        android:icon="@drawable/ic_chat"
        android:title="@string/chatbot" />
    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings" />
</menu>
